--- a/Views/AR_AboutPage.xaml
+++ b/Views/AR_AboutPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:AR_Notas.Models"
              x:Class="AR_Notas.Views.AR_AboutPage"
-             Title="AR_AboutPages">
+             Title="AR_AboutPage1">
     <ContentPage.BindingContext>
         <models:AR_About />
     </ContentPage.BindingContext>
